--- a/themes/hexo-theme-typescript/layout/_partial/scripts.ejs
+++ b/themes/hexo-theme-typescript/layout/_partial/scripts.ejs
@@ -14,6 +14,7 @@
 </script>
 <% } %>
 
+<script async src="//dn-lbstatics.qbox.me/busuanzi/2.3/busuanzi.pure.mini.js"></script>
 <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
 <script>window.jQuery || document.write('<script src="/js/jquery.min.js"><\/script>')</script>
 
