update logo and font

--- a/themes/hexo-theme-typescript/layout/_partial/head.ejs
+++ b/themes/hexo-theme-typescript/layout/_partial/head.ejs
@@ -31,7 +31,7 @@
     <link rel="icon" href="<%- theme.favicon %>">
   <% } %>
   
-	<script src="https://use.typekit.net/eyf3hir.js"></script>
+	<script src="https://use.typekit.net/zfu8yuh.js"></script>
   <script>try{Typekit.load({ async: false });}catch(e){}</script>
   <%- css('style.css') %>
   <script>
