--- a/themes/hexo-theme-typescript/source/style.less
+++ b/themes/hexo-theme-typescript/source/style.less
@@ -2,7 +2,7 @@
 
 // Font families
 @fallback-font-family: Helvetica, Arial, "Hiragino Sans GB", "Hiragino Sans GB W3", Microsoft JhengHei, WenQuanYi Micro Hei, "Microsoft YaHei", sans-serif;
-@base-font-family: "futura-pt", @fallback-font-family;
+@base-font-family: "pt sans", @fallback-font-family;
 @code-font-family: "inconsolata", Consolas, monospace, sans-serif;
 
 // Font configuration
